# hosc

./: .boring  .gitignore  .gitlab-ci.yml  Makefile  README  README.md  hosc.cabal
.github/workflows/: ci.yml
Help/: timer.hs
Sound/: OSC.hs  OpenSoundControl.hs  Osc.hs
Sound/OSC/: Alias.hs  Class.hs  Coding.hs  Core.hs  Datem.hs  Datum.hs  FD.hs  Normalise.hs  Packet.hs  Time.hs  Type.hs  Unpack.hs  Wait.hs
Sound/OSC/Coding/: Byte.hs  Cast.hs  Class.hs  Coerce.hs  Convert.hs
Sound/OSC/Coding/Decode/: Base.hs  Binary.hs
Sound/OSC/Coding/Encode/: Base.hs  Builder.hs
Sound/OSC/Datum/: Datem.hs  Extra.hs  Normalise.hs  Parse.hs  Pp.hs  Unpack.hs
Sound/OSC/Packet/: Class.hs  Coerce.hs  Pp.hs
Sound/OSC/Time/: Pp.hs  System.hs  Thread.hs
Sound/OSC/Time/Thread/: MonadIO.hs
Sound/OSC/Transport/: FD.hs  Monad.hs
Sound/OSC/Transport/FD/: TCP.hs  UDP.hs
Sound/OpenSoundControl/: Byte.hs  Cast.hs  Class.hs  Coding.hs  Coerce.hs  OSC.hs  TCP.hs  Time.hs  Transport.hs  Type.hs  U8v.hs  UDP.hs  Wait.hs
Sound/OpenSoundControl/Coding/: Byte.hs  Cast.hs  Coerce.hs
Sound/OpenSoundControl/Coding/Decode/: Base.hs  Binary.hs
Sound/OpenSoundControl/Coding/Encode/: Base.hs  Builder.hs
Sound/OpenSoundControl/OSC/: Binary.hs  Builder.hs  Decode.hs  Encode.hs  Encoding.hs  Type.hs
Sound/OpenSoundControl/Transport/: FD.hs  Monad.hs  TCP.hs  UDP.hs
Sound/OpenSoundControl/Transport/FD/: TCP.hs  UDP.hs
Sound/OpenSoundControl/Wait/: FD.hs  Monad.hs
Sound/Osc/: Alias.hs  Core.hs  Datum.hs  Fd.hs  Hugs.hs  Packet.hs  Text.hs  Time.hs  Wait.hs
Sound/Osc/Coding/: Byte.hs  Cast.hs  Convert.hs
Sound/Osc/Coding/Byte/: Plain.hs
Sound/Osc/Coding/Decode/: Base.hs  Binary.hs
Sound/Osc/Coding/Encode/: Base.hs  Builder.hs
Sound/Osc/Datum/: Parse.hs  Pp.hs
Sound/Osc/Packet/: Pp.hs
Sound/Osc/Time/: Pp.hs  System.hs  Thread.hs  Timeout.hs
Sound/Osc/Time/Thread/: MonadIO.hs
Sound/Osc/Transport/: Fd.hs  Monad.hs
Sound/Osc/Transport/Fd/: Socket.hs  Tcp.hs  Udp.hs
benchmarks/: benchmark.hs  encoding.hs
benchmarks/Sound/OSC/: NFData.hs
benchmarks/Sound/OpenSoundControl/: NFData.hs
cmd/: Makefile  trace.hs
contrib/tests/: Makefile  README  bm.hs  qc.hs
contrib/tests/Sound/OSC/: Arbitrary.hs
contrib/tests/Sound/Osc/: Arbitrary.hs  NFData.hs
tests/: Makefile  bm.hs  test.hs
tests/Sound/OSC/: Arbitrary.hs  NFData.hs
tests/Sound/OpenSoundControl/: Arbitrary.hs
