Cabal-Version:     2.4
Name:              hosc
Version:           0.20
Synopsis:          Haskell Open Sound Control
Description:       Haskell Open Sound Control
License:           GPL-3.0-only
License-File:      contrib/LICENSE
Category:          Sound
Copyright:         (c) Rohan Drape, Stefan Kersten and others, 2007-2022
Author:            Rohan Drape, Stefan Kersten
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hosc
Tested-With:       GHC == 8.8.4
Build-Type:        Simple
Data-Files:        README.md

Library
  Build-Depends:   base >= 4.8 && < 5,
                   binary >= 0.7.2,
                   blaze-builder >= 0.3,
                   bytestring,
                   data-binary-ieee754,
                   network >= 2.3,
                   time >= 1.5,
                   transformers
  Default-Language:Haskell2010
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Sound.OSC
                   Sound.OSC.Coding.Byte
                   Sound.OSC.Coding.Cast
                   Sound.OSC.Coding.Convert
                   Sound.OSC.Coding.Decode.Base
                   Sound.OSC.Coding.Decode.Binary
                   Sound.OSC.Coding.Encode.Base
                   Sound.OSC.Coding.Encode.Builder
                   Sound.OSC.Core
                   Sound.OSC.Datum
                   Sound.OSC.FD
                   Sound.OSC.Packet
                   Sound.OSC.Time
                   Sound.OSC.Transport.FD
                   Sound.OSC.Transport.FD.TCP
                   Sound.OSC.Transport.FD.UDP
                   Sound.OSC.Transport.Monad
                   Sound.OSC.Wait

Source-Repository  head
  Type:            git
  Location:        https://gitlab.com/rd--/hosc
