Cabal-Version:     2.4
Name:              hosc
Version:           0.20
Synopsis:          Haskell Open Sound Control
Description:       Haskell Open Sound Control
License:           GPL-3.0-only
License-File:      contrib/LICENSE
Category:          Sound
Copyright:         (c) Rohan Drape, Stefan Kersten and others, 2007-2022
Author:            Rohan Drape, Stefan Kersten
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hosc
Tested-With:       GHC == 8.8.4
Build-Type:        Simple
Data-Files:        README.md

Library
  Build-Depends:   base >= 4.8 && < 5,
                   binary >= 0.7.2,
                   blaze-builder >= 0.3,
                   bytestring,
                   data-binary-ieee754,
                   network >= 2.3,
                   time >= 1.5,
                   transformers
  Default-Language:Haskell2010
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Sound.Osc
                   Sound.Osc.Alias
                   Sound.Osc.Coding.Byte
                   Sound.Osc.Coding.Cast
                   Sound.Osc.Coding.Convert
                   Sound.Osc.Coding.Decode.Base
                   Sound.Osc.Coding.Decode.Binary
                   Sound.Osc.Coding.Encode.Base
                   Sound.Osc.Coding.Encode.Builder
                   Sound.Osc.Core
                   Sound.Osc.Datum
                   Sound.Osc.Datum.Parse
                   Sound.Osc.Datum.Pp
                   Sound.Osc.Fd
                   Sound.Osc.Packet
                   Sound.Osc.Packet.Pp
                   Sound.Osc.Time
                   Sound.Osc.Time.Pp
                   Sound.Osc.Time.System
                   Sound.Osc.Time.Thread
                   Sound.Osc.Time.Thread.MonadIO
                   Sound.Osc.Transport.Fd
                   Sound.Osc.Transport.Fd.Tcp
                   Sound.Osc.Transport.Fd.Udp
                   Sound.Osc.Transport.Monad
                   Sound.Osc.Wait

Source-Repository  head
  Type:            git
  Location:        https://gitlab.com/rd--/hosc
