Cabal-Version:     2.4
Name:              hosc
Version:           0.22
Synopsis:          Haskell Open Sound Control
Description:       Haskell library implementing the Open Sound Control protocol
License:           GPL-3.0-only
License-File:      contrib/LICENSE
Category:          Sound
Copyright:         (c) Rohan Drape, Stefan Kersten and others, 2007-2025
Author:            Rohan Drape, Stefan Kersten
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hosc
Tested-With:       GHC == 9.12.1
Build-Type:        Simple
Data-Files:        README.md

Library
  Build-Depends:   base >= 4.8 && < 5,
                   binary >= 0.8,
                   blaze-builder >= 0.3,
                   bytestring >= 0.11.0.0,
                   network >= 2.3,
                   parsec,
                   safe,
                   time >= 1.5,
                   transformers
  Default-Language:Haskell2010
  GHC-Options:     -Wall -Wno-x-partial -Wno-incomplete-uni-patterns
  Exposed-modules: Sound.Osc
                   Sound.Osc.Coding.Byte
                   Sound.Osc.Coding.Cast
                   Sound.Osc.Coding.Convert
                   Sound.Osc.Coding.Decode.Base
                   Sound.Osc.Coding.Decode.Binary
                   Sound.Osc.Coding.Encode.Base
                   Sound.Osc.Coding.Encode.Builder
                   Sound.Osc.Core
                   Sound.Osc.Datum
                   Sound.Osc.Fd
                   Sound.Osc.Packet
                   Sound.Osc.Text
                   Sound.Osc.Time
                   Sound.Osc.Time.System
                   Sound.Osc.Time.Thread
                   Sound.Osc.Time.Thread.MonadIO
                   Sound.Osc.Time.Timeout
                   Sound.Osc.Transport.Fd
                   Sound.Osc.Transport.Fd.Socket
                   Sound.Osc.Transport.Fd.Tcp
                   Sound.Osc.Transport.Fd.Udp
                   Sound.Osc.Transport.Monad
                   Sound.Osc.Wait

Source-Repository  head
  Type:            git
  Location:        https://gitlab.com/rd--/hosc
